--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 h1 {
     background-color:rgba(0, 0, 0, 0.384);
-    color: black;
+    
     padding: 8px;
     padding-left: 45%;
     padding-right: 45%;
@@ -8,3 +8,12 @@ h1 {
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: small;
   }
+
+h2{
+  background-color:rgba(0, 0, 0, 0.158);
+   
+   padding-bottom: 1%;
+    
+}
+
+
