--- a/src/app/auto/auto.component.html
+++ b/src/app/auto/auto.component.html
@@ -6,7 +6,9 @@
         <mat-radio-button value="23.8">Benzin</mat-radio-button>
     </p>
     <p>
-        <mat-radio-button value="23.8">Autogas</mat-radio-button>
+        <mat-radio-button value="17,9">Autogas (LPG)</mat-radio-button>
+    </p><p>
+        <mat-radio-button value="16,3">Erdgas (CNG)</mat-radio-button>
     </p>
     <p>
         <mat-radio-button value="0">Elektrisch</mat-radio-button>
