--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,18 +11,46 @@
     </select>
 </mat-form-field>
 <mat-form-field class="example-full-width" appearance="fill">
-    <mat-label >Personen im Haushalt</mat-label>
-    <input  [(ngModel)]="Personen_im_Haushalt" matInput placeholder="..." type="number" (change)=strom() min="1" step="1"
-        >
+    <mat-label>Personen im Haushalt</mat-label>
+    <input [(ngModel)]="Personen_im_Haushalt" matInput placeholder="..." type="number" (change)=strom() min="1"
+        step="1">
 </mat-form-field>
-<mat-tab-group>
+<mat-tab-group (click)="gesamt()">
 
     <mat-tab label="Auto">
         <div *ngFor="let item of aut">
-            <app-auto></app-auto>
+            <mat-radio-group [(ngModel)]="co2prokm" aria-label="Select an option" (change)="auto()">
+                <p>
+                    <mat-radio-button value="26.5">Diesel</mat-radio-button>
+                </p>
+                <p>
+                    <mat-radio-button value="23.8">Benzin</mat-radio-button>
+                </p>
+                <p>
+                    <mat-radio-button value="17.9">Autogas (LPG)</mat-radio-button>
+                </p><p>
+                    <mat-radio-button value="16.3">Erdgas (CNG)</mat-radio-button>
+                </p>
+                <p>
+                    <mat-radio-button value="0">Elektrisch</mat-radio-button>
+                </p>
+            </mat-radio-group>
+            <p>
+                <mat-form-field class="example-full-width">
+                    <mat-label>Strecke</mat-label>
+                    <input [(ngModel)]="km" matInput placeholder="..." type="number" step="10" min="0" (change)="auto()">
+                </mat-form-field>km
+            </p>
+            <p>
+                <mat-form-field class="example-full-width">
+                    <mat-label>verbrauch</mat-label>
+                    <input [(ngModel)]="verbrauch" matInput placeholder="..." type="number" step="0.1" (change)="auto()" min="0">
+                </mat-form-field>l/100km
+            </p>
+            CO2: {{km*verbrauch*co2prokm + "g"}}
             <h2></h2>
         </div>
-        <button mat-stroked-button (click)="authinzu()">Fahrzeug Hinzufügen</button>
+      <!--  <button mat-stroked-button (click)="authinzu()">Fahrzeug Hinzufügen</button> -->
 
     </mat-tab>
     <mat-tab label="Strom">
@@ -54,7 +82,7 @@
         <p>
             CO2 pro Person: {{leit_h2o_ver*co2prolleitung /Personen_im_Haushalt}}g
         </p>
-        <p>
+      <h2></h2>  <p>
             <mat-form-field class="example-full-width">
                 <mat-label>Flaschenwasser</mat-label>
                 <input [(ngModel)]="fla_h2o_ver" matInput placeholder="..." type="number" step="10" (change)=wasser()>
@@ -74,7 +102,8 @@
 
         <h2></h2>
 
-        <p>Bahn: </p><p>
+        <p>Bahn: </p>
+        <p>
             <mat-form-field class="example-full-width">
                 <mat-label>Strecke</mat-label>
                 <input [(ngModel)]="Bahn_km" matInput placeholder="..." type="number" step="10">
@@ -84,24 +113,52 @@
         <h2> </h2>
         Reisebus:
         <p>
-        <mat-form-field class="example-full-width">
-            <mat-label>Strecke</mat-label>
-            <input [(ngModel)]="Rbus_km" matInput placeholder="..." type="number" step="10">
-        </mat-form-field>km
-    </p>
+            <mat-form-field class="example-full-width">
+                <mat-label>Strecke</mat-label>
+                <input [(ngModel)]="Rbus_km" matInput placeholder="..." type="number" step="10">
+            </mat-form-field>km
+        </p>
         <p>
             CO2: {{Rbus_km*Reisebusco2 }}g
         </p>
         <h2></h2>
         Auto:
-        <app-auto></app-auto>
+        <mat-radio-group [(ngModel)]="co2prokmu" aria-label="Select an option" (change)="autou()">
+            <p>
+                <mat-radio-button value="26.5">Diesel</mat-radio-button>
+            </p>
+            <p>
+                <mat-radio-button value="23.8">Benzin</mat-radio-button>
+            </p>
+            <p>
+                <mat-radio-button value="17.9">Autogas (LPG)</mat-radio-button>
+            </p><p>
+                <mat-radio-button value="16.3">Erdgas (CNG)</mat-radio-button>
+            </p>
+            <p>
+                <mat-radio-button value="0">Elektrisch</mat-radio-button>
+            </p>
+        </mat-radio-group>
+        <p>
+            <mat-form-field class="example-full-width">
+                <mat-label>Strecke</mat-label>
+                <input [(ngModel)]="kmu" matInput placeholder="..." type="number" step="10" min="0" (change)="auto()">
+            </mat-form-field>km
+        </p>
+        <p>
+            <mat-form-field class="example-full-width">
+                <mat-label>verbrauch</mat-label>
+                <input [(ngModel)]="verbrauchu" matInput placeholder="..." type="number" step="0.1" (change)="auto()" min="0">
+            </mat-form-field>l/100km
+        </p>
+        CO2: {{kmu*verbrauchu*co2prokmu }}g
 
     </mat-tab>
     <mat-tab label="Internet">
         <p>
             <mat-form-field class="example-full-width">
                 <mat-label>Internet</mat-label>
-                <input [(ngModel)]="internet_gbit" matInput placeholder="..." type="number" step="1">
+                <input [(ngModel)]="internet_gbit" matInput placeholder="..." type="number" step="1" (change)="internet()">
             </mat-form-field>Gbyt
         </p>
         CO2: {{internet_gbit * g_pro_gbit }}g
@@ -113,16 +170,16 @@
 
         <mat-radio-group [(ngModel)]="heizart" aria-label="Select an option" (change)=heizung()>
             <p>
-                <mat-radio-button value=co2prom3holz>Holz</mat-radio-button>
+                <mat-radio-button value=1830000>Holz</mat-radio-button>
             </p>
             <p>
-                <mat-radio-button value=co2prolöl>Öl</mat-radio-button>
+                <mat-radio-button value=2650>Öl</mat-radio-button>
             </p>
             <p>
-                <mat-radio-button value=Co2prom3gas>Gas</mat-radio-button>
+                <mat-radio-button value=1630>Gas</mat-radio-button>
             </p>
             <p>
-                <mat-radio-button value=co2prokwh>Strom</mat-radio-button>
+                <mat-radio-button value=40>Strom</mat-radio-button>
             </p>
 
             <p>
@@ -142,16 +199,46 @@
         </p>
         CO2 pro Person: {{heitzmenge*heizart /Personen_im_Haushalt}}g
     </mat-tab>
-    <!-- <mat-tab label="Müll"> Content </mat-tab>-->
-
     <mat-tab label="Ernährung">
+
+        <mat-form-field class="example-full-width">
+            <mat-label>Mahlzeiten mit Fleisch</mat-label>
+            <input [(ngModel)]="Mahlzeiten_mit_Fleisch" matInput placeholder="..." type="number" (change)=Ernahrung()>
+        </mat-form-field>
+        <p> CO2: {{Mahlzeiten_mit_Fleisch*co2promahlmitfl}}g</p>
+        <h2></h2>
+        <mat-form-field class="example-full-width">
+            <mat-label>Mahlzeiten ohne Fleisch</mat-label>
+            <input [(ngModel)]="Mahlzeiten_ohne_Fleisch" matInput placeholder="..." type="number" (change)=Ernahrung()>
+        </mat-form-field>
+        <p> CO2: {{Mahlzeiten_ohne_Fleisch*co2promahlohnefl}}g</p>
 
 
     </mat-tab>
+    <mat-tab label="Kleidung">
 
-    <mat-tab label="Gesamt">
+        <mat-form-field class="example-full-width">
+            <mat-label>Neue Kleidungsstücke</mat-label>
+            <input [(ngModel)]="Neue_Kleidungsstucke" matInput placeholder="..." type="number" (change)=Kleidung()>
+        </mat-form-field>
+        <p>CO2:  {{Neue_Kleidungsstucke*co2_kleidung}}g    </p>
+        <mat-form-field class="example-full-width">
+            <mat-label>Neue Schuhe</mat-label>
+            <input [(ngModel)]="Neue_Schuhe" matInput placeholder="..." type="number" (change)=Kleidung()>
+        </mat-form-field>
+        <p> CO2: {{Neue_Schuhe*co2_shuhe}}g    </p>
+
+    </mat-tab>
+    <mat-tab label="Gesamt" >
+
+Co2 Gesamt: <p>{{auto_co2 + strom_co2 + co2_h2o + urlaub_co2 + internet_co2 + heiz_co2 + ernarungs_co2 + kleidung_co2 + 1104000}}g</p>
+{{co2gesamtkg}} Kg 
+<p>
+{{co2gesamtt}} Tonnen
+</p>
 
 
+{{co2gesamtt*80}} Bäume müssen gepflanzt werden um diese Menge an CO2 zu neutralisieren.
 
 
 
